--- a/config.yaml
+++ b/config.yaml
@@ -1,14 +1,18 @@
 # Full path to the directory containing the staff Excel spreadsheets
-input_directory: "/Users/d3y010/projects/organizational/labor_planning"
+input_directory: "/Users/d3y010/projects/organizational/labor_planner"
 
 # Full path to the output directory
-output_directory: "/Users/d3y010/projects/organizational/labor_planning/outputs"
+output_directory: "/Users/d3y010/projects/organizational/labor_planner/outputs"
 
 # Full path with file name and extension to the staff list CSV file
-staff_csv: "/Users/d3y010/projects/organizational/labor_planning/admin/staff_list.csv"
+staff_csv: "/Users/d3y010/projects/organizational/labor_planner/admin/staff_list.csv"
 
 # Full path with file name and extension to the work hours CSV file
-work_hours_csv: "/Users/d3y010/projects/organizational/labor_planning/admin/work_hours.csv"
+work_hours_csv: "/Users/d3y010/projects/organizational/labor_planner/admin/work_hours.csv"
 
 # Fiscal year to process in format YYYY
 fiscal_year: 2018
+
+# Run type - choose from [Full Year; Quarters 2, 3; Quarters 2, 3, 4; Quarters 3, 4, 1;
+#        Quarters 3, 4; or Quarters 4, 1
+run_design: "full_year"
